# rust-cat-api

./: .env  Cargo.toml  cert.pem  key-no-password.pem  key.pem  test.sh
migrations/2023-05-19-083626_create_cats/: down.sql  up.sql
src/: main.rs  models.rs  schema.rs
