[package]
name = "cat-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3.1"
diesel = { version = "2.0.4", features = ["postgres", "r2d2"] }
dotenv = "0.15.0"
env_logger = "0.10.0"
log = "0.4.17"
r2d2 = "0.8.10"
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
validator = "0.16.0"
validator_derive = "0.16.0"
